<resources>

    <!-- AppInfo相关 -->
    <string name="app_name">VWOW</string>
    <string name="action_settings">Settings</string>
    <string name="scheme">hmwnw</string>
    <string name="host">com.hemaapp.wnw</string>
    <string name="quit_app">再按一次退出VWOW</string>
    <string name="login">登录</string>

    <!-- 登录注册相关 -->
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="back_to_mainpage">回首页</string>
    <string name="inputPhone">手机号</string>
    <string name="inputPhoneEmpty">请输入手机号</string>
    <string name="inputPhoneRegister">输入手机号</string>
    <string name="inputCode">输入验证码</string>
    <string name="inputCodeEmpty">请输入验证码</string>
    <string name="sendCode">发送验证码</string>
    <string name="inputPwd">密码</string>
    <string name="rememberPwd">记住密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="inputPhoneError">手机号格式不正确</string>
    <string name="inputPwdError">请输入6-16位密码</string>
    <string name="logining">登录中，请稍后</string>
    <string name="next_step">下一步</string>
    <string name="use_auth">用社交账号登录</string>
    <string name="action">警告</string>
    <string name="agree">同意</string>
    <string name="findPwd">找回密码</string>
    <string name="hintPwd">密码（密码可包含6-16位数字、字母）</string>
    <string name="hintCheckPwd">确认密码</string>
    <string name="setPwd">设置密码</string>
    <string name="differentPwd">请确定密码输入一致</string>
    <string name="register_protocol1">注册协议</string>
    <string name="register_protocol2">《注册协议》</string>
    <string name="fixData">完善信息</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="city">所在地区</string>
    <string name="invite_code">邀请码</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="photograph">拍照</string>
    <string name="album">从相册选择上传</string>
    <string name="photoFailed">头像上传失败，赶快重新上传吧</string>
    <string name="error_temp_token_empty">临时token丢失，请重新申请</string>
    <string name="error_register_pwd_empty">密码丢失，请重新填写</string>
    <string name="error_nickname_empty">请填写昵称</string>
    <string name="error_invite_code_empty">请填写邀请码</string>
    <string name="reset_pwd">找回密码</string>
    <string name="hint_reset_pwd">密码（密码可包含6-16位数字、字母）</string>
    <string name="hint_reset_pwd_check">确认新密码</string>
    <string name="your_position">您所在地区</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="please_input_invite_code">请输入邀请码</string>

    <!-- 首页相关 -->
    <string name="tab1">首页</string>
    <string name="tab2">发现</string>
    <string name="tab3">订阅</string>
    <string name="tab4">我的</string>
    <string name="search_action">美美的过新年</string>
    <string name="welcome_login">欢迎登录</string>
    <string name="welcome_login_content">您好，该APP为会员制信息内容</string>
    <string name="recharge_title">充值返利</string>
    <string name="recharge_btn">去充值</string>
    <string name="hot_tag">热门标签</string>
    <string name="new_message">最新</string>
    <string name="my_subscribe">我的订阅</string>
    <string name="my_notice">我的消息</string>
    <string name="seller_page">店铺主页</string>
    <string name="goods_page">商品详情</string>
    <string name="goods">商品</string>
    <string name="blog">帖子</string>
    <string name="blog_detail">帖子详情</string>
    <string name="subscribe_add">添加订阅</string>
    <string name="subscribe_cancel">取消订阅</string>
    <string name="goods_description">商品介绍</string>
    <string name="goods_comment">商品评论</string>
    <string name="remain_pay_time">剩余支付时间：</string>
    <string name="paid">已支付</string>
    <string name="not_to_pay">未支付</string>
    <string name="fans">粉丝</string>
    <string name="sale_count">已售</string>
    <string name="stock">库存</string>
    <string name="seller_district">所在地区：</string>
    <string name="seller_main_product">KOL标签：</string>
    <string name="seller_hobby">个人爱好：</string>
    <string name="buy">购买</string>
    <string name="buy_count">购买数量:</string>
    <string name="buy_now">立即购买</string>
    <string name="shop_car">购物车</string>
    <string name="add_shop_car">加入购物车</string>
    <string name="comment_level">评价等级:</string>
    <string name="comment_count">评价数量:</string>
    <string name="leave_message">客服留言</string>
    <string name="hint_write_messga">写下你的留言</string>
    <string name="relevant_labels">相关标签</string>
    <string name="recommend">相关推荐</string>
    <string name="all_comment">所有评论</string>
    <string name="write_comment">写评论内容</string>
    <string name="hint_post_comment">客观评论，更具参考性</string>

    <!-- 常用提示语 -->
    <string name="loading">加载中</string>
    <string name="success">成功</string>
    <string name="commit">提交</string>
    <string name="committing">提交中</string>
    <string name="commit_apply">提交申请</string>
    <string name="sending">发送中</string>
    <string name="send">发送</string>
    <string name="uploading_head">头像上传中</string>
    <string name="id_empty">id空了</string>
    <string name="delete">删除</string>
    <string name="deleteing">删除中</string>

    <!-- 支付相关 -->
    <string name="total">合计:</string>
    <string name="pay">支付</string>
    <string name="pay_now">立即支付</string>
    <string name="pay_action">支付提醒</string>
    <string name="pay_action_content">恭喜!支付已成功!</string>
    <string name="check_order">确认订单</string>
    <string name="freight">运费:</string>
    <string name="watch_order">查看订单</string>
    <string name="continue_shopping">继续逛逛</string>
    <string name="data_null">数据空了</string>
    <string name="pay_count">应付总金额:</string>
    <string name="voucher">抵用券</string>
    <string name="choose_other_way">选择其他支付方式</string>
    <string name="pay_account">账户余额支付</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_wechat_info">推荐安装微信客户端的用户使用</string>
    <string name="pay_alipay">支付宝支付</string>
    <string name="pay_alipay_info">推荐安装支付宝客户端的用户使用</string>
    <string name="pay_unionpay">银行卡支付</string>
    <string name="pay_unionpay_info">推荐银联储蓄用户使用</string>
    <string name="balance">余额:</string>

    <!-- 我的相关 -->
    <string name="click_login">点击登录</string>
    <string name="my_invite_code">邀请人:</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_record">我的足迹</string>
    <string name="my_order">我的订单</string>
    <string name="my_group_order">开团订单</string>
    <string name="my_cart">我的购物车</string>
    <string name="address_controller">收货地址</string>
    <string name="account_controller">账户管理</string>
    <string name="need_pay">待付款</string>
    <string name="need_send">待发货</string>
    <string name="need_receive">待收货</string>
    <string name="need_reply">待评价</string>
    <string name="have_close">已关闭</string>
    <string name="refund">退款/售后</string>
    <string name="guidelines">使用说明</string>
    <string name="introduce">软件介绍</string>
    <string name="share_app">分享软件</string>
    <string name="connect_service">联系我们</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_success">清除完毕!</string>
    <string name="clearing">正在清除缓存</string>
    <string name="log_out">退出登录</string>
    <string name="log_out_ing">退出中</string>
    <string name="log_out_action">退出提醒</string>
    <string name="log_out_action_content">╭(╯3╰)╮一定要退出吗?</string>
    <string name="log_out_check">残忍退出</string>
    <string name="log_out_uncheck">继续逛逛</string>
    <string name="personal_data">个人信息</string>
    <string name="change_login_pwd">修改登录密码</string>
    <string name="change_pay_pwd">修改支付密码</string>
    <string name="input_old_pwd">输入旧密码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="input_new_pwd_again">再次输入新密码</string>
    <string name="add_address">新增地址</string>
    <string name="set_default_address">设为默认地址</string>
    <string name="account_count">账户余额</string>
    <string name="transaction_detail">交易明细</string>
    <string name="my_coupon">我的抵用券</string>
    <string name="refund_action">选择退款原因</string>
    <!-- 发现相关 -->
    <string name="sale_charts">月销量排行榜</string>
    <string name="fans_charts">月粉丝排行榜</string>

</resources>