<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_image_title_next" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_with_border"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/inputPhoneRegister"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/imageClearUsername"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/icon_clear"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/grey_text"
            android:textSize="@dimen/textsize_8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_with_border"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/inputCode"
                android:inputType="number"
                android:maxLength="8"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:singleLine="true" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/grey_line" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtSendCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/sendCode"
                    android:textColor="@color/main_purple"
                    android:textSize="@dimen/textsize_8"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/layoutAfter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/txtSecond"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="60"
                        android:text="0"
                        android:textColor="@color/main_purple"
                        android:textSize="@dimen/textsize_8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="s后重新发送"
                        android:textColor="@color/grey_text"
                        android:textSize="@dimen/textsize_8" />
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkAgree"
            style="@android:style/Widget.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/textsize_8" />

        <TextView
            android:id="@+id/txtProtocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_protocol2"
            android:textColor="@color/main_purple"
            android:textSize="@dimen/textsize_8" />
    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/bg_click_button"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_9" />
</LinearLayout>