<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_image_title_next" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext_with_border"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editOldPwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_old_pwd"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:paddingLeft="12dp"
                android:paddingTop="20dp"
                android:singleLine="true"
                android:textSize="@dimen/textsize_8" />

            <ImageView
                android:id="@+id/imgClearOldPwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/icon_clear"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/bg_edittext_with_border"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editPwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_new_pwd"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:paddingLeft="12dp"
                android:paddingTop="20dp"
                android:singleLine="true"
                android:textSize="@dimen/textsize_8" />

            <ImageView
                android:id="@+id/imgClearPwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/icon_clear"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/bg_edittext_with_border"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editPwdCheck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_new_pwd_again"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:paddingLeft="12dp"
                android:paddingTop="20dp"
                android:singleLine="true"
                android:textSize="@dimen/textsize_8" />

            <ImageView
                android:id="@+id/imgClearCheckPwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/icon_clear"
                android:visibility="invisible" />
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_click_button"
            android:text="@string/commit"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_9" />
    </LinearLayout>

</LinearLayout>