<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/header_image_title_next" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.hemaapp.wnw.view.MyRefreshLoadmoreLayout
            android:id="@+id/refreshLoadmoreLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <xtom.frame.view.XtomListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:divider="@null"
                android:overScrollMode="never" />
        </com.hemaapp.wnw.view.MyRefreshLoadmoreLayout>

        <ImageView
            android:id="@+id/imageToTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/icon_to_top"
            android:visibility="gone" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_line" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:src="@drawable/icon_edit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/write_comment"
                android:textSize="@dimen/textsize_8" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible">

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_with_border"
                android:hint="@string/hint_post_comment"
                android:maxLines="3"
                android:padding="8dp"
                android:textSize="@dimen/textsize_7" />

            <TextView
                android:id="@+id/txtSend"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:text="@string/send"
                android:textColor="@color/grey_text" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>